# StudentManagementSystem

./: README.md
.obsidian/: workspace.json
Client/: CMakeLists.txt  client.cpp
OS/: FileSnapshot.cpp  FileSnapshot.h  Log.cpp  Log.h  OperatingSystem.cpp  OperatingSystem.h
OSFile/: system.txt
OSFile/BackUp/: version1.backup  version3.backup  versionreset.backup
OSFile/FileSnapshot/: blockstack
Server/: CMakeLists.txt  server.cpp
TcpSocket/: TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h
